Fixed layout bug

--- a/src/components/ProjectContainer/ProjectContainer.scss
+++ b/src/components/ProjectContainer/ProjectContainer.scss
@@ -6,6 +6,7 @@
   // margin-top: 30px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
   justify-items: center;
   gap: 12em 0;
