--- a/src/components/ProjectEntry/ProjectEntry.scss
+++ b/src/components/ProjectEntry/ProjectEntry.scss
@@ -1,30 +1,34 @@
 @import "src/styles/index.scss";
 
-.project-entry {
+.entry-container {
   display: grid;
-  justify-items: center;
+  align-self: stretch;
+}
+
+.project-entry {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-image {
   width: calc(75% + 10%);
   min-height: 250px;
-  flex-grow: 1;
+
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  border-radius: 20px 20px 0px 0px;
 
   @include breakpoint(0px, 600px) {
     height: 150px;
   }
 }
 
-.project-entry-container {
-  display: grid;
-  align-self: stretch;
-}
-
 .project-card {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   background-color: $primary-colour;
   color: $secondary-colour;
   padding: 25px 5%;
@@ -42,15 +46,7 @@
     text-wrap: wrap;
     font-size: clamp(0.7rem, 1vw + 1rem, 1.2rem);
     margin-bottom: 0;
-  }
-  @include breakpoint(0px, 600px) {
-    // justify-content: center;
-    // align-items: center;
-    // text-align: center;
-    // border-left-style: none;
-    // border-left-width: none;
-    // border-top-width: 30px;
-    // border-top-style: solid;
+    flex-basis: 7em;
   }
 }
 
